fix(styles): add spacing below sessionize-wrapper for better layout spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -216,4 +216,9 @@ p {
   .company-name {
     font-size: 1.5rem;
   }
+
+  .sessionize-wrapper {
+    margin-bottom: 300px;
+  }
 }
+
